--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <nav class="nav navbar-expand navbar-dark bg-dark">
   <div class="navbar-nav">
-    <a class="nav-item nav-link">Home</a>
-    <a class="nav-item nav-link">Users</a>
-    <a class="nav-item nav-link" routerLink="/products">Products</a>
+    <a class="nav-item nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+    <a class="nav-item nav-link" routerLinkActive="active" >Users</a>
+    <a class="nav-item nav-link" routerLink="/products" routerLinkActive="active">Products</a>
     <a class="nav-item nav-link">Logout</a>
   </div>
 </nav>
