--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,6 @@
-<h1>Welcome to Atelier Nomades !</h1>
-<button class="btn-dark btn" (click)="goToProducts()">Go to products</button>
+<div class="p-4">
+    <div class="container">
+        <h1>Welcome to Atelier Nomades !</h1>
+        <button class="btn-dark btn" (click)="goToProducts()">Go to products</button>
+    </div>
+</div>
