--- a/src/app/products/products-add-edit/products-add-edit.component.html
+++ b/src/app/products/products-add-edit/products-add-edit.component.html
@@ -1,10 +1,42 @@
 <h1>Add/edit product</h1>
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <label>Title</label>
-    <input type="text" formControlName="title" class="form-control" />
-    <div *ngIf="submitted && f.title.errors">
-        <div *ngIf="f.title.errors.required">Title is required</div>
-        <div *ngIf="f.title.errors.minlength">Title must be to have 3 characters</div>
+    <div class="form-row">
+        <div class="form-group col">
+            <label for="title">Title</label>
+            <input type="text" formControlName="title" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.title.errors }" />
+            <div *ngIf="submitted && f.title.errors" class="invalid-feedback">
+                <div *ngIf="f.title.errors.required">Title is required</div>
+                <div *ngIf="f.title.errors.minlength">Title must be to have 3 characters</div>
+            </div>
+        </div>
+        <div class="form-group col">
+            <label for="description">Description</label>
+            <input type="text" formControlName="description" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.description.errors }" />
+            <div *ngIf="submitted && f.description.errors" class="invalid-feedback">
+                <div *ngIf="f.description.errors.required">Description is required</div>
+            </div>
+        </div>
+        <div class="form-group col">
+            <label for="cost">Cost</label>
+            <input type="number" formControlName="cost" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.cost.errors }" />
+            <div *ngIf="submitted && f.cost.errors" class="invalid-feedback">
+                <div *ngIf="f.cost.errors.required">Cost is required</div>
+            </div>
+        </div>
+        <div class="form-group col">
+            <label for="cost">Quantity</label>
+            <input type="number" formControlName="quantity" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.quantity.errors }" />
+            <div *ngIf="submitted && f.quantity.errors" class="invalid-feedback">
+                <div *ngIf="f.quantity.errors.required">Quantity is required</div>
+            </div>
+        </div>
+        <div class="form-group col">
+            <label for="star">Rating star</label>
+            <input type="number" formControlName="star" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.star.errors }" />
+            <div *ngIf="submitted && f.star.errors" class="invalid-feedback">
+                <div *ngIf="f.star.errors.required">Quantity is required</div>
+            </div>
+        </div>
     </div>
     <button class="btn btn-primary">Save</button>
     <a routerLink="/products" class="btn btn-link">Cancel</a>
