--- a/src/app/products/products-add-edit/products-add-edit.component.html
+++ b/src/app/products/products-add-edit/products-add-edit.component.html
@@ -1,4 +1,5 @@
-<h1>Add/edit product</h1>
+<h1 *ngIf="isAddMode">Add product</h1>
+<h1 *ngIf="!isAddMode">Edit product</h1>
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="form-row">
         <div class="form-group col">
@@ -32,7 +33,7 @@
         </div>
         <div class="form-group col">
             <label for="star">Rating star</label>
-            <input type="number" formControlName="star" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.star.errors }" />
+            <input type="number" formControlName="star" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.quantity.errors }" />
             <div *ngIf="submitted && f.star.errors" class="invalid-feedback">
                 <div *ngIf="f.star.errors.required">Quantity is required</div>
             </div>
@@ -40,5 +41,6 @@
     </div>
     <button class="btn btn-primary">Save</button>
     <a routerLink="/products" class="btn btn-link">Cancel</a>
+    <a (click)="deleteProduct()" class="btn btn-link">Delete</a>
 </form>
 {{ form.value | json }}
