--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -1,4 +1,6 @@
 <h2>List of products</h2>
+<label for="Search">Search</label>
+<input id="Search" type="text" class="form-control" [(ngModel)]="termSearch" placeholder="Search product" />
 <a class="btn btn-sm btn-success mb-2" routerLink="add">Add product</a>
 <table class="table table-striped">
     <thead>
@@ -12,12 +14,15 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let product of products">
+        <tr *ngFor="let product of products | productsSearch:termSearch">
             <td>{{product.title}}</td>
             <td>{{product.description}}</td>
             <td>{{product.cost}}</td>
             <td>{{product.quantity}}</td>
-            <td>{{ product.star }}</td>
+            <td>
+                {{ product.star }}
+                <app-star></app-star>
+            </td>
             <td>
                 <a routerLink="edit/{{product.id}}" class="btn btn-sm btn-primary mr-1">Edit</a>
             </td>
