--- a/src/app/@shared/star/star.component.html
+++ b/src/app/@shared/star/star.component.html
@@ -1,1 +1,3 @@
-<p>star works!</p>
+{{ rating }}
+
+<div *ngFor="let value of values" [class.filled]="rating >= value" (click)="onClick(value)"></div>
