--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<nav class="nav navbar-expand navbar-dark bg-dark">
+<nav class="nav navbar-expand navbar-dark bg-dark" *ngIf="user">
   <div class="navbar-nav">
     <a class="nav-item nav-link" routerLink="/home" routerLinkActive="active">Home</a>
     <a class="nav-item nav-link" routerLinkActive="active" >Users</a>
     <a class="nav-item nav-link" routerLink="/products" routerLinkActive="active">Products</a>
-    <a class="nav-item nav-link">Logout</a>
+    <a class="nav-item nav-link" (click)="logout()">Logout</a>
   </div>
 </nav>
 <router-outlet></router-outlet>
